# BoatMotorBoard

./: .gitignore  .gitmodules  .mxproject  BoatMotorSTM32.ioc  BoatMotorSTM32.jdebug  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  STM32G474CETX_FLASH.ld  backupBoatMotorSTM32.ioc  build.ninja  gauge.code-workspace  launch-codex  motor.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json  setup-codex.sh
Core/Inc/: LMT01.h  RTE_Components.h  SSD1306.h  bsp.h  data_manager.h  font.h  i2c_interface.h  main.h  pinout.h  posted_signals.h  pressure_sensor.h  private_signal_ranges.h  pubsub_signals.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Services/: fault_manager.c  fault_manager.h
Core/Services/app_cli/: app_cli.c  app_cli.h  app_cli_commands.c  app_cli_manual_commands.c
Core/Src/: LMT01.c  SSD1306.c  blinky.c  bsp.c  data_manager.c  interrupts.c  main.c  pressure_sensor.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  usb.c  usb_board_api.c  usb_descriptors.c
Core/bsp/: bsp.c  bsp.h  i2c_bus_stm32.c  i2c_bus_stm32.h  shared_i2c_events.h  tusb_config.h  usb_board_api.c  usb_board_api.h  usb_descriptors.c
Core/bsp/drivers/: bsp.c  gpio_stm32.h  i2c_bus.c  i2c_bus_stm32.c  i2c_bus_stm32.h  shared_i2c.h  shared_i2c_events.h
Core/bsp/interfaces/: i2c_bus.h
Core/services/: LMT01.c  LMT01.h  SSD1306.c  SSD1306.h  blinky.c  box_to_box.c  can_messages.h  config.h  data_manager.c  director.c  fault_manager.c  fault_manager.h  flowsensor.c  flowsensor.h  fram.h  halt_if_debugging.h  log_com.c  log_com.h  pressure_sensor.c  ssd1306_fonts.c  ssd1306_fonts.h  usb.c  usb.h
Core/services/cli/: cli.c  cli.h  cli_commands.c  cli_manual_commands.c  cli_manual_commands.h
cmake/stm32cubemx/: CMakeLists.txt
gauge/: .mxproject  BoatGaugeSTM32.ioc  BoatGaugeSTM32.jdebug  CMakeLists.txt
gauge/src/: interrupts.c  main.c  main.h  posted_signals.h  private_signal_ranges.h  pubsub_signals.h  stm32g4xx_hal_conf.h  stm32g4xx_hal_msp.c  stm32g4xx_it.c  stm32g4xx_it.h
gauge/src/bsp/: bsp.c  bsp.h  tusb_config.h  usb_descriptors.c
gauge/src/bsp/device/: stm32g474cetx_flash.ld
gauge/src/services/: blinky.c  config.c  config.h  director.c  director.h  fault_manager.c  fault_manager.h  log_com.c  pc_com.c
gauge/src/services/cli/: cli.c  cli_commands.c  cli_manual_commands.c  cli_manual_commands.h
messages/: build.sh
messages/src/: CMakeLists.txt  ConfigDB.options  ConfigDB.proto  MessageType.proto  MotorData.proto
motor/: BoatMotorSTM32.jdebug  CMakeLists.txt
motor/src/: main.c  main.h  posted_signals.h  private_signal_ranges.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
motor/src/bsp/: bsp.h
motor/src/services/: config.c  director.c  director.h  fram.c  pc_com.c  pressure_sensor.h
motor/src/services/cli/: cli_commands.c  cli_commands.h  cli_manual_commands.c
pc_com/: GUIRebuild.bat  README.md  __main__.py  bootloader_tool.py  bootloader_window.py  bootloader_window.ui  com_controller.py  com_thread.py  config_manager.py  config_window.py  config_window.ui  create_venv.ps1  main_window.py  main_window.ui  motor_dashboard.py  motor_data_simulator.py  packets.py  pc_com.bat  pc_com.py  plot_manager.py  requirements.txt  terminal.py
pc_com/includes/: __init__.py
pc_com/includes/dfu/: README.md  __init__.py  descriptor.py  dfu.py
pc_com/messages/: ConfigDB_pb2.py  MessageType_pb2.py  MotorData_pb2.py  __init__.py
pc_com/test/: terminal_test.py
shared/: sysmem.c
shared/bsp/: bsp_backup_ram.c  shared_i2c.c  shared_i2c.h  usb_descriptors.c
shared/bsp/interfaces/: can_interface.h
shared/services/: box_to_box.c  box_to_box.h  can_messages.h  fault_manager.c  fault_manager.h  log_com.c  log_com.h  posted_signals.h  pubsub_signals.h  reset.c  reset.h
shared/services/pc_com/: pc_com.c  pc_com.h
test/: CMakeLists.txt
test/box_to_box_gauge_tests/: CMakeLists.txt  box_to_box_gauge_tests.cpp
test/box_to_box_motor_tests/: CMakeLists.txt  box_to_box_motor_tests.cpp
test/fault_manager_tests/: CMakeLists.txt  fault_manager_tests.cpp
test/gauge_director_tests/: CMakeLists.txt  gauge_director_tests.cpp
test/lmt01_tests/: CMakeLists.txt  lmt01_tests.cpp
test/motor_director_tests/: CMakeLists.txt  motor_director_tests.cpp
test/pc_com_packet_tests/: CMakeLists.txt  pc_com_packet_tests.cpp
test/pressure_sensor_tests/: CMakeLists.txt  pressure_sensor_tests.cpp
test/protocol_unit_tests/: CMakeLists.txt  protocol_tests.cpp
test/support/: arm_math.h  bsp.h  bsp_box_to_box_mock.cpp  bsp_box_to_box_mock.h  cli_commands.h  config.h  flowsensor.h  pc_com_test_mocks.cpp  stm32g4xx.h  stm32g4xx_hal.h
