[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-com"
version = "0.1.0"
description = "Desktop PC communication tool for BoatMotorBoard firmware"
readme = "pc_com/README.md"
requires-python = ">=3.12"
dependencies = [
    "libusb-package==1.0.26.3",
    "numpy==2.2.1",
    "protobuf==3.20.1",
    "pyqtgraph==0.13.7",
    "pyserial==3.5",
    "PySide6-Essentials==6.9.0",
    "pyusb==1.3.1",
    "rich==14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pc_com*"]

[tool.setuptools.package-data]
pc_com = ["*.ui", "icons/*.png"]
